# EffectiveCpp

./: .gitignore  CMakeLists.txt  README.md  boost_hana.cpp  boost_hana_switch.cpp  ch1_deducing_types.cpp  ch2_auto.cpp  ch3_class_qualifier.cpp  ch3_constexpr.cpp  ch3_enum.cpp  ch3_moving_to_modern.cpp  ch3_typetraits.cpp  ch4_smartpointers.cpp  cpp17_fold.cpp  cpp_crtp.cpp  utils.h
